--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   </h2>
 
                   <div class="text">
-                    Sou um desenvolvedor frontend freelancer com 2 anos de
+                    Sou um desenvolvedor frontend com 2 anos de
                     experiência, fascinado em criar interfaces de usuário
                     atraentes e funcionais. Tenho habilidades sólidas em HTML,
                     CSS e JavaScript, além de experiências com framework como
