alterando titulo do site

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- FAVICON -->
-    <link rel="icon" type="image/x-icon" href="assets/images/projects/me-IA.ico">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/images/projects/me-IA.ico"
+    />
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -49,7 +53,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <title>Portifólio - Thiago (Hedz) de Souza Pereira</title>
+    <title>Portfólio - Thiago (Hedz) de Souza Pereira</title>
 
     <main class="port">
       <section class="home" id="home">
@@ -119,12 +123,12 @@
                   </h2>
 
                   <div class="text">
-                    Sou um desenvolvedor frontend com 2 anos de
-                    experiência, fascinado em criar interfaces de usuário
-                    atraentes e funcionais. Tenho habilidades sólidas em HTML,
-                    CSS e JavaScript, além de experiências com framework como
-                    Vue.js e bibliotecas de animação como GSAP (GreenSock),
-                    Animate.css, entre outros.
+                    Sou um desenvolvedor frontend com 2 anos de experiência,
+                    fascinado em criar interfaces de usuário atraentes e
+                    funcionais. Tenho habilidades sólidas em HTML, CSS e
+                    JavaScript, além de experiências com framework como Vue.js e
+                    bibliotecas de animação como GSAP (GreenSock), Animate.css,
+                    entre outros.
                   </div>
 
                   <div class="text">
@@ -195,11 +199,13 @@
                     </a>
                   </div>
 
-                  <a class="tel" href="https://wa.me/16981357811" target="_blank">
-                    <i class="fa-brands fa-whatsapp"></i> 
-                    <span class="number">
-                      (16) 9 8135-7811
-                    </span>
+                  <a
+                    class="tel"
+                    href="https://wa.me/16981357811"
+                    target="_blank"
+                  >
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <span class="number"> (16) 9 8135-7811 </span>
                   </a>
                 </div>
               </div>
